@@ -44,136 +44,140 @@ noinst_PROGRAMS = lib500 lib501 lib502 lib503 lib504 lib505 lib506	\
   lib517 lib518 lib519 lib520 lib521 lib523 lib524 lib525 lib526 lib527	\
   lib529 lib530 lib532 lib533 lib536
 
+# Dependencies (may need to be overriden)
+LDADD = $(LIBDIR)/libcurl.la
+DEPENDENCIES = $(LIBDIR)/libcurl.la
+
 lib500_SOURCES = lib500.c $(SUPPORTFILES)
-lib500_LDADD = $(LIBDIR)/libcurl.la
-lib500_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib500_LDADD = $(LDADD)
+lib500_DEPENDENCIES = $(DEPENDENCIES)
 
 lib501_SOURCES = lib501.c $(SUPPORTFILES)
-lib501_LDADD = $(LIBDIR)/libcurl.la
-lib501_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib501_LDADD = $(LDADD)
+lib501_DEPENDENCIES = $(DEPENDENCIES)
 
 lib502_SOURCES = lib502.c $(SUPPORTFILES)
-lib502_LDADD = $(LIBDIR)/libcurl.la
-lib502_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib502_LDADD = $(LDADD)
+lib502_DEPENDENCIES = $(DEPENDENCIES)
 
 lib503_SOURCES = lib503.c $(SUPPORTFILES)
-lib503_LDADD = $(LIBDIR)/libcurl.la
-lib503_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib503_LDADD = $(LDADD)
+lib503_DEPENDENCIES = $(DEPENDENCIES)
 
 lib504_SOURCES = lib504.c $(SUPPORTFILES)
-lib504_LDADD = $(LIBDIR)/libcurl.la
-lib504_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib504_LDADD = $(LDADD)
+lib504_DEPENDENCIES = $(DEPENDENCIES)
 
 lib505_SOURCES = lib505.c $(SUPPORTFILES)
-lib505_LDADD = $(LIBDIR)/libcurl.la
-lib505_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib505_LDADD = $(LDADD)
+lib505_DEPENDENCIES = $(DEPENDENCIES)
 
 lib506_SOURCES = lib506.c $(SUPPORTFILES)
-lib506_LDADD = $(LIBDIR)/libcurl.la
-lib506_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib506_LDADD = $(LDADD)
+lib506_DEPENDENCIES = $(DEPENDENCIES)
 
 lib507_SOURCES = lib507.c $(SUPPORTFILES)
-lib507_LDADD = $(LIBDIR)/libcurl.la
-lib507_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib507_LDADD = $(LDADD)
+lib507_DEPENDENCIES = $(DEPENDENCIES)
 
 lib508_SOURCES = lib508.c $(SUPPORTFILES)
-lib508_LDADD = $(LIBDIR)/libcurl.la
-lib508_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib508_LDADD = $(LDADD)
+lib508_DEPENDENCIES = $(DEPENDENCIES)
 
 lib509_SOURCES = lib509.c $(SUPPORTFILES)
-lib509_LDADD = $(LIBDIR)/libcurl.la
-lib509_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib509_LDADD = $(LDADD)
+lib509_DEPENDENCIES = $(DEPENDENCIES)
 
 lib510_SOURCES = lib510.c $(SUPPORTFILES)
-lib510_LDADD = $(LIBDIR)/libcurl.la
-lib510_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib510_LDADD = $(LDADD)
+lib510_DEPENDENCIES = $(DEPENDENCIES)
 
 lib511_SOURCES = lib511.c $(SUPPORTFILES)
-lib511_LDADD = $(LIBDIR)/libcurl.la
-lib511_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib511_LDADD = $(LDADD)
+lib511_DEPENDENCIES = $(DEPENDENCIES)
 
 lib512_SOURCES = lib512.c $(SUPPORTFILES)
-lib512_LDADD = $(LIBDIR)/libcurl.la
-lib512_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib512_LDADD = $(LDADD)
+lib512_DEPENDENCIES = $(DEPENDENCIES)
 
 lib513_SOURCES = lib513.c $(SUPPORTFILES)
-lib513_LDADD = $(LIBDIR)/libcurl.la
-lib513_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib513_LDADD = $(LDADD)
+lib513_DEPENDENCIES = $(DEPENDENCIES)
 
 lib514_SOURCES = lib514.c $(SUPPORTFILES)
-lib514_LDADD = $(LIBDIR)/libcurl.la
-lib514_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib514_LDADD = $(LDADD)
+lib514_DEPENDENCIES = $(DEPENDENCIES)
 
 lib515_SOURCES = lib515.c $(SUPPORTFILES)
-lib515_LDADD = $(LIBDIR)/libcurl.la
-lib515_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib515_LDADD = $(LDADD)
+lib515_DEPENDENCIES = $(DEPENDENCIES)
 
 lib516_SOURCES = lib516.c $(SUPPORTFILES)
-lib516_LDADD = $(LIBDIR)/libcurl.la
-lib516_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib516_LDADD = $(LDADD)
+lib516_DEPENDENCIES = $(DEPENDENCIES)
 
 lib517_SOURCES = lib517.c $(SUPPORTFILES)
-lib517_LDADD = $(LIBDIR)/libcurl.la
-lib517_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib517_LDADD = $(LDADD)
+lib517_DEPENDENCIES = $(DEPENDENCIES)
 
 lib518_SOURCES = lib518.c $(SUPPORTFILES)
-lib518_LDADD = $(LIBDIR)/libcurl.la
-lib518_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib518_LDADD = $(LDADD)
+lib518_DEPENDENCIES = $(DEPENDENCIES)
 
 lib519_SOURCES = lib519.c $(SUPPORTFILES)
-lib519_LDADD = $(LIBDIR)/libcurl.la
-lib519_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib519_LDADD = $(LDADD)
+lib519_DEPENDENCIES = $(DEPENDENCIES)
 
 lib520_SOURCES = lib520.c $(SUPPORTFILES)
-lib520_LDADD = $(LIBDIR)/libcurl.la
-lib520_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib520_LDADD = $(LDADD)
+lib520_DEPENDENCIES = $(DEPENDENCIES)
 
 lib521_SOURCES = lib521.c $(SUPPORTFILES)
-lib521_LDADD = $(LIBDIR)/libcurl.la
-lib521_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib521_LDADD = $(LDADD)
+lib521_DEPENDENCIES = $(DEPENDENCIES)
 
 lib523_SOURCES = lib523.c $(SUPPORTFILES)
-lib523_LDADD = $(LIBDIR)/libcurl.la
-lib523_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib523_LDADD = $(LDADD)
+lib523_DEPENDENCIES = $(DEPENDENCIES)
 
 lib524_SOURCES = lib524.c $(SUPPORTFILES)
-lib524_LDADD = $(LIBDIR)/libcurl.la
-lib524_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib524_LDADD = $(LDADD)
+lib524_DEPENDENCIES = $(DEPENDENCIES)
 
 lib525_SOURCES = lib525.c $(SUPPORTFILES)
-lib525_LDADD = $(LIBDIR)/libcurl.la
-lib525_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib525_LDADD = $(LDADD)
+lib525_DEPENDENCIES = $(DEPENDENCIES)
 
 lib526_SOURCES = lib526.c $(SUPPORTFILES)
 lib526_CFLAGS = -DLIB526
-lib526_LDADD = $(LIBDIR)/libcurl.la
-lib526_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib526_LDADD = $(LDADD)
+lib526_DEPENDENCIES = $(DEPENDENCIES)
 
 lib527_SOURCES = lib526.c $(SUPPORTFILES)
 lib527_CFLAGS = -DLIB527
-lib527_LDADD = $(LIBDIR)/libcurl.la
-lib527_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib527_LDADD = $(LDADD)
+lib527_DEPENDENCIES = $(DEPENDENCIES)
 
 lib529_SOURCES = lib525.c $(SUPPORTFILES)
 lib529_CFLAGS = -DLIB529
-lib529_LDADD = $(LIBDIR)/libcurl.la
-lib529_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib529_LDADD = $(LDADD)
+lib529_DEPENDENCIES = $(DEPENDENCIES)
 
 lib530_SOURCES = lib530.c $(SUPPORTFILES)
 lib530_CFLAGS = -DLIB530
-lib530_LDADD = $(LIBDIR)/libcurl.la
-lib530_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib530_LDADD = $(LDADD)
+lib530_DEPENDENCIES = $(DEPENDENCIES)
 
 lib532_SOURCES = lib526.c $(SUPPORTFILES)
 lib532_CFLAGS = -DLIB532
-lib532_LDADD = $(LIBDIR)/libcurl.la
-lib532_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib532_LDADD = $(LDADD)
+lib532_DEPENDENCIES = $(DEPENDENCIES)
 
 lib533_SOURCES = lib533.c $(SUPPORTFILES)
-lib533_LDADD = $(LIBDIR)/libcurl.la
-lib533_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib533_LDADD = $(LDADD)
+lib533_DEPENDENCIES = $(DEPENDENCIES)
 
 lib536_SOURCES = lib536.c $(SUPPORTFILES)
-lib536_LDADD = $(LIBDIR)/libcurl.la
-lib536_DEPENDENCIES = $(LIBDIR)/libcurl.la
+lib536_LDADD = $(LDADD)
+lib536_DEPENDENCIES = $(DEPENDENCIES)
 
