@@ -7,6 +7,10 @@
                                   Changelog
 
 Daniel (21 October 2006)
+- Nir Soffer made the tests/libtest/Makefile.am use a proper variable for all
+  the single test applications' link and dependences, so that you easier can
+  override those from the command line when using make.
+
 - Armel Asselin separated CA cert verification problems from problems with
   reading the (local) CA cert file to let users easier pinpoint the actual
   problem. CURLE_SSL_CACERT_BADFILE (77) is the new libcurl error code.
